# omp_tests

./: CMakeLists.txt  main.c
